# oscilloscope-lab-viewer

./: .bazelrc  .gitignore  1  BUILD.bazel  LICENSE  MODULE.bazel  README.md  TODO.md  WORKSPACE.bazel  build_and_run.sh  log.txt  oscilloscope.py  requirements.txt  requirements_lock.txt  run.sh  system_python.bzl
Lab3/Data/: BUILD.bazel
Lab3/Data/B/: B.CSV
Lab3/Data/C/: C.CSV
Lab3/Data/D/: D.CSV
src/: BUILD.bazel  main.py  run_viewer.py
src/core/: BUILD.bazel  data_handler.py
src/themes/: theme_manager.py
src/themes/definitions/: gruvbox_dark.json  gruvbox_light.json  white.json
src/ui/: BUILD.bazel  cursor_manager.py  file_browser.py  oscilloscope_viewer.py  plot_manager.py
