load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)

filegroup(
    name = "all_csv_data",
    srcs = ["//Lab3/Data:lab3_data"],
    visibility = ["//visibility:public"],
)