load("@rules_python//python:defs.bzl", "py_binary")

filegroup(
    name = "all",
    srcs = ["//src:viewer"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "viewer",
    srcs = ["@rules_python//python:current_py_toolchain"],
    main = "//src:run_viewer.py",
    deps = ["//src:viewer_lib"],
    data = ["//Lab3/Data:lab3_data"],
    imports = ["src"],
)