module(
    name = "eset355_lab_viewer",
    version = "1.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_python", version = "0.27.1")

# Initialize Python toolchain with explicit version support
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)

# Override available Python versions and specify exact version mapping
python.override(
    minor_mapping = {
        "3.11": "3.11.7",  # Specify exact version for stability
    },
)

# Configure pip dependencies with enhanced settings
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    name = "pip",
    experimental_target_platforms = [
        "host",  # Use host platform for compatibility
    ],
    requirements_lock = "//:requirements_lock.txt",
    # Enable pip index URL override through environment if needed
    envsubst = ["PIP_INDEX_URL"],
    experimental_index_url = "${PIP_INDEX_URL:-https://pypi.org/simple}",
)

use_repo(pip, "pip")