module(
    name = "eset355_lab_viewer",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.9",
    python_implementation = "cpython",
    configure_stub_tool_path = True,
    enable_py_cc_deps = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.9",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(python, "python_3_9", "pythons_hub")
use_repo(pip, "pip")