load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "ui",
    srcs = [
        "__init__.py",
        "cursor_manager.py",
        "file_browser.py",
        "oscilloscope_viewer.py",
        "plot_manager.py",
    ],
    deps = [
        "//src/core",
        "@pip//matplotlib",
        "@pip//numpy",
    ],
    visibility = ["//visibility:public"],
)